# upcheck

./: .gitignore  Caddyfile.sample  README.md  flake.nix  pyproject.toml  upcheck-systemd-setup.sh  upcheck.sample.toml  upcheck.service
tests/filecheck/: .lit_test_times.txt  check-simple.toml  config.toml  lit.cfg
upcheck/: cache.py  check.py  daemon.py  db.py  migrations.py  model.py  webapp.py
upcheck/templates/: base.html
